2003-11-12  Derek Price  <derek@ximbiot.com>

	* add.c (add): Allocate more space for the string I added characters
	to.
	(Report from Mark D. Baushke <mdb@cvshome.org>.)

2003-11-11  Derek Price  <derek@ximbiot.com>

	* add.c (add), classify.c (Classify_File), client.c (update_entries),
	repos.c (Name_Repository): Use consistent quoting in error messages.
	Misc reformatting.
	* sanity.sh: Update to match.

2003-11-10  Derek Price  <derek@ximbiot.com>

	* commit.c (find_fileproc, check_fileproc):  Refuse to remove files
	when the file exists in the sandbox.  This used to cause data loss.
	(Report from Andreas Reifschneider <andyreif@studcs.uni-sb.de>.)

	* sanity.sh (rmadd3): Update to match.  Expand comments.

2003-11-10  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rmadd3): Test the behavior of commit after the
	add/replace.
	(Report from Andreas Reifschneider <andyreif@studcs.uni-sb.de>.)

2003-11-10  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rmadd3): Fix another typo.

2003-11-10  Mark D. Baushke  <mdb@cvshome.org>

	* recurse.c (do_dir_proc): Set xframe.repository to NULL after a
	call to free().

2003-11-10  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rmadd3): Fix typo.

2003-11-10  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rmadd3): New tests that confirms that CVS refuses to
	delete a file it thinks was already removed.
	(Report and test from Andreas Reifschneider
	<andyreif@studcs.uni-sb.de>.)

2003-11-03  Derek Price  <derek@ximbiot.com>

	* sanity.sh (server): Test that the global `-l' option is ignored
	nonfatally.

2003-11-03  Derek Price  <derek@ximbiot.com>

	* server.c (serve_global_option): Warn that -l is being ignored rather
	than exiting fatally due to backwards compatibility complaints from
	administrators.

2003-11-01  Larry Jones  <lawrence.jones@eds.com>

	* filesubr.c (xcmp): Make sure S_ISLNK exists before calling it.
	(Reported by Paul Edwards <kerravon@nosppaam.w3.to>.)

2003-10-31  Derek Price  <derek@ximbiot.com>
